# oesenc

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  get_oexserverd.sh  vcpkg.json
.github/workflows/: ci.yml  pull_request.yml  windows.yaml
examples/: CMakeLists.txt  oesenc_example.cpp  oesu_example.cpp
include/oesenc/: area.h  chartfile.h  chartreader.h  depth.h  deptharea.h  keylistreader.h  line.h  opencpn.h  polygon.h  position.h  rect.h  s57.h  servercontrol.h  serverreader.h  sounding.h
src/: area.cpp  chartfile.cpp  chartreader.cpp  depth.cpp  deptharea.cpp  filereader.cpp  filereader.h  keylistreader.cpp  line.cpp  opencpn.cpp  polygon.cpp  position.cpp  random.cpp  random.h  reader.h  rect.cpp  s57.cpp  servercontrol.cpp  serverreader.cpp  sounding.cpp  vectorreader.cpp  vectorreader.h
tests/: CMakeLists.txt  chartfile_test.cpp  cryptreader_test.cpp  keylistreader_test.cpp  servercontrol_test.cpp
